--- a/templates/settings.html
+++ b/templates/settings.html
@@ -5,22 +5,7 @@
 {% block content %}
 <div class="card shadow-lg p-4 mb-4 w-100">
     <h1 class="card-title">Paramètres</h1>
-    <!-- Flash messages block -->
-    {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-            <div class="alert-container">
-                {% for category, message in messages %}
-                    <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
-                        {{ message }}
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                {% endfor %}
-            </div>
-        {% endif %}
-    {% endwith %}
-    <!-- End of flash messages block -->
+    {% block messages %}{% endblock %}
     <form method="POST">
         <ul class="nav nav-tabs" id="contactTabs" role="tablist">
             <li class="nav-item">
