--- a/templates/index.html
+++ b/templates/index.html
@@ -57,5 +57,8 @@
 
 {% block scripts %}
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script>
+    var deploySiteUrl = "{{ url_for('deployment.deploy_site') }}";
+</script>
 <script src="{{ url_for('static', filename='js/index.js') }}"></script>
 {% endblock %}
