--- a/templates/domains.html
+++ b/templates/domains.html
@@ -32,6 +32,7 @@
     </table>
     
     <div id="messages"></div> <!-- Conteneur pour les messages -->
+    <div id="socket-messages"></div> <!-- Added container for socket messages -->
 </div>
 {% endblock %}
 
