--- a/templates/add_domain.html
+++ b/templates/add_domain.html
@@ -15,7 +15,7 @@
     <div class="progress mt-4 d-none" id="progressContainer">
         <div id="progressBar" class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
     </div>
-    <div id="messages"></div>
+    <div id="socket-messages"></div>
 </div>
 {% endblock %}
 
