--- a/templates/add_domain.html
+++ b/templates/add_domain.html
@@ -8,7 +8,7 @@
     <form id="domainForm">
         <div class="form-group">
             <label for="domain">Nom de domaine</label>
-            <input type="text" class="form-control" id="domain" name="domain" required pattern="^[a-zA-Z0-9.-]+$" title="Nom de domaine invalide.">
+            <input type="text" class="form-control" id="domain" name="domain" required pattern="^[a-zA-Z0-9.\\-]+$" title="Nom de domaine invalide.">
         </div>
         <button type="submit" class="btn btn-primary" id="submitButtonInstall">Installer</button>
     </form>
