--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('site_management.add_domain') }}">Ajouter un domaine</a>
+                    <a class="nav-link" href="{{ url_for('site_management.add_domain') }}">Installer un domaine</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('editor.editor') }}">Rédiger un article</a>
