update editor.js and editor.html

--- a/templates/editor.html
+++ b/templates/editor.html
@@ -35,6 +35,7 @@
 {% block scripts %}
     <script src="{{ url_for('static', filename='tinymce/tinymce.min.js') }}"></script>
     <script>
+        const editorUrl = "{{ url_for('editor.editor') }}";
         const languageUrl = "{{ url_for('static', filename='tinymce/langs/fr_FR.js') }}";
     </script>
     <script src="{{ url_for('static', filename='js/editor.js') }}"></script>
