--- a/templates/editor.html
+++ b/templates/editor.html
@@ -29,7 +29,7 @@
         <button type="submit" class="btn btn-primary" id="submitButton">Publier</button>
     </form>
 </div>
-<div id="messages"></div>
+<div id="socket-messages"></div>
 {% endblock %}
 
 {% block scripts %}
