--- a/templates/add_domain.html
+++ b/templates/add_domain.html
@@ -17,6 +17,24 @@
     </div>
     <div id="socket-messages"></div>
 </div>
+
+<!-- Popup Modal -->
+<div class="modal fade" id="popupModal" tabindex="-1" role="dialog" aria-labelledby="popupModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="popupModalLabel">Attention !</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" id="popupMessage"></div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
 
 {% block scripts %}
@@ -116,7 +134,13 @@
             tempMessages = [];
             executeStep(domain, steps[currentStepIndex]);
         } else {
-            addMessage(errorMessage, 'danger');
+            // Check if the error message indicates a popup error
+            if (errorMessage.includes("popup-error")) {
+                $('#popupMessage').text(errorMessage);
+                $('#popupModal').modal('show');
+            } else {
+                addMessage(errorMessage, 'danger'); // Show error message in the UI instead
+            }
             hasErrorOccurred = true;
             document.getElementById('submitButtonInstall').disabled = false;
         }
