--- a/templates/add_domain.html
+++ b/templates/add_domain.html
@@ -28,10 +28,10 @@
     const steps = [
         { name: 'checkDNS', url: '{{ url_for("deployment.check_dns_route") }}', successStatus: 'valid'},
         { name: 'createNginxConfig', url: '{{ url_for("deployment.create_nginx_config_route") }}', successStatus: 'success' },
-        { name: 'setupSSL', url: '{{ url_for("deployment.setup_ssl_route") }}', successStatus: 'setup' },
-        { name: 'installWordPress', url: '{{ url_for("deployment.install_wordpress_route") }}', successStatus: 'installed' },
-        { name: 'initializeGitRepo', url: '{{ url_for("deployment.initialize_git_repo_route") }}', successStatus: 'initialized' },
-        { name: 'deployStatic', url: '{{ url_for("deployment.deploy_static_route") }}', successStatus: 'deployed' }
+        { name: 'setupSSL', url: '{{ url_for("deployment.setup_ssl_route") }}', successStatus: 'success' },
+        { name: 'installWordPress', url: '{{ url_for("deployment.install_wordpress_route") }}', successStatus: 'success' },
+        { name: 'initializeGitRepo', url: '{{ url_for("deployment.initialize_git_repo_route") }}', successStatus: 'success' },
+        { name: 'deployStatic', url: '{{ url_for("deployment.deploy_static_route") }}', successStatus: 'success' }
     ];
 
     let currentStepIndex = 0;
