--- a/templates/domains.html
+++ b/templates/domains.html
@@ -85,7 +85,11 @@
         row.append($('<td>').text(domain.status));
         var actionsCell = $('<td>');
         
-        if (domain.status !== 'Configuré') {
+        if (domain.status === 'En attente de vérification') {
+            actionsCell.append($('<button>').addClass('btn btn-sm btn-warning').text('Vérifier').click(function() {
+                configureDomain(domain.name);
+            }));
+        } else if (domain.status !== 'Configuré') {
             actionsCell.append($('<button>').addClass('btn btn-sm btn-primary mr-2').text('Configurer').click(function() {
                 configureDomain(domain.name);
             }));
