--- a/templates/domains.html
+++ b/templates/domains.html
@@ -60,25 +60,15 @@
         });
     }
 
-    function addDomain(domain, registrar) {
-        $.post('{{ url_for("domains.add_domain") }}', {
-            domain: domain,
-            registrar: registrar
-        }, function(data) {
-            if (data.status === 'success') {
-                addDomainToList(data.domain);
-                $('#domain').val('');
-            } else if (data.status === 'error' && data.message === 'Domaine déjà existant') {
-                alert('Le domaine est déjà dans la liste.');
-            } else {
-                alert('Erreur lors de l\'ajout du domaine: ' + data.message);
-            }
-        });
-    }
-
     function addDomainToList(domains) {
         // Clear existing rows
         $('#domainList').empty();
+
+        // Check if domains is an array
+        if (!Array.isArray(domains)) {
+            console.error('Expected an array of domains, but got:', domains);
+            return; // Exit the function if not an array
+        }
 
         // Group domains by status
         const groupedDomains = {};
@@ -119,6 +109,22 @@
                 $('#domainList').append(row);
             });
         }
+    }
+
+    function addDomain(domain, registrar) {
+        $.post('{{ url_for("domains.add_domain") }}', {
+            domain: domain,
+            registrar: registrar
+        }, function(data) {
+            if (data.status === 'success') {
+                addDomainToList(data.domain);
+                $('#domain').val('');
+            } else if (data.status === 'error' && data.message === 'Domaine déjà existant') {
+                alert('Le domaine est déjà dans la liste.');
+            } else {
+                alert('Erreur lors de l\'ajout du domaine: ' + data.message);
+            }
+        });
     }
 
     function configureDomain(domain) {
